sistemato bug del testo in overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,7 +73,7 @@ h1 span{
     border-radius: 5px;
     padding: 32px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
-    
+    overflow-y: auto;
 }
 .hidden{
     display: none;
